[package]
name = "rust"
version = "0.1.0"
authors = ["Russell Matney <russell.matney@gmail.com>"]


[[bin]]
name = "prob1"
path = "src/1.rs"

[[bin]]
name = "prob2"
path = "src/2.rs"

[[bin]]
name = "prob3"
path = "src/3.rs"

[[bin]]
name = "prob4"
path = "src/4.rs"

[[bin]]
name = "prob5"
path = "src/5.rs"

[dependencies]
